2004-03-17  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: custom site commands and hooks (cscripts) now use cookies as arguments
	* doc: new section on custom commands
	* wzd_misc.c: new function get_bandwidth()
	* feature: get/set server variables (wzd_vars.c, wzd_vars.h)
	* siteconfig: use new api to server variables
	* tcl: use new api to server variables, function tcl_vars

2004-03-04  Pierre Chifflier  <pollux@wzdftpd.net>

	* debian: debian packages restarted from scratch
	* bugfix: removed compilations speed-ups, conflicting with openssl

	* IMPORTANT: installation path changed for *.txt, and  users files

2004-03-03  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: fixed build on visual
	* feature: added tcl module to visual project

2004-03-02  Pierre Chifflier  <pollux@wzdftpd.net>

	* configure.in: openssl is now autodetected

2004-03-01  Pierre Chifflier  <pollux@wzdftpd.net>

	* backends: pam backend started
	* configure.in: berkeley db headers and libs detection

2004-02-29  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: first implementation of protocols (used in custom
        scripts and custom site commands)
	* tcl: site tcl, tcl protocol - module is basically working
	* configure.in: mysql headers and lib detection
	* doc: several updates

2004-02-28  Roman Bogorodskiy <bogorodskiy@inbox.ru>

	* backends: mysql backend started

2004-02-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: infinite loop when waiting ident response when connect times out (linux)

2004-02-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: missing O_BINARY for permission file (visual)
	* bugfix: remove wzd_server_uid var (causing link problems)
	* bugfix: incomplete and progress bar not working (visual)

2004-02-17  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: WZD_MODULE_CLOSE function called (if existing) before module unload
	* feature: module_unload()
	* feature: hook_unload()
	* feature: new module: TCL