@@ -49,7 +49,9 @@ num</entry></row>
 <row><entry>%usermaxul</entry><entry>Maximum upload speed</entry></row>
 <row><entry>%username</entry><entry>Login name</entry></row>
 <row><entry>%usernum_logins</entry><entry>Max simultaneous logins</entry></row>
+<row><entry>%userpath</entry><entry>User's path (absolute in filesystem)</entry></row>
 <row><entry>%userpid</entry><entry>User's connection PID (siteop)</entry></row>
+<row><entry>%userpwd</entry><entry>User's current path (relative to home dir)</entry></row>
 <row><entry>%userratio</entry><entry>User ratio, or unlimited</entry></row>
 <row><entry>%userslots</entry><entry>Remaining slots (gadmin)</entry></row>
 <row><entry>%userspeed</entry><entry>Current user speed (if transferring file)</entry></row>
@@ -87,6 +89,20 @@ units</entry></row>
 <row><entry>%grouptotal_ul</entry><entry>Total bytes uploaded</entry></row>
 <row><entry>%grouptotal_ul2</entry><entry>Total bytes uploaded, converted in
 units</entry></row>
+
+</tbody>
+</tgroup>
+</table>
+
+<table frame='all' id="cookies_file">
+<title>File Cookies</title>
+<tgroup cols='2' align='left' colsep='0' rowsep='0'>
+<tbody>
+<row><entry>Cookie</entry><entry>Description</entry></row>
+
+<row><entry>%filepath</entry><entry>Full path to uploaded/downloaded file <footnote><para>
+available during an upload/download</para></footnote>
+</entry></row>
 
 </tbody>
 </tgroup>
