@@ -1,3 +1,11 @@
+2004-03-21  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* cookies: userpwd (user path, relative to home dir)
+	* cookies: userpath (user path, absolute in filesystem)
+	* cookies: filepath (uploaded\downloaded file path, absolute)
+	* bugfix: event POSTDOWNLOAD not called
+	* bugfix: wrong file size for files > 4Go (visual) (closes: #920425)
+
 2004-03-17  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: custom site commands and hooks (cscripts) now use cookies as arguments
